SERVER-30571 EphemeralForTest oplogStartHack works if startingPosition is behind oplog